<!--
   Copyright (C) 2014 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <org.rajawali3d.surface.RajawaliSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_version" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version" />

            <TextView
                android:id="@+id/appversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tango_event" />

            <TextView
                android:id="@+id/tangoevent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start2device" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/start2deviceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose_count" />

            <TextView
                android:id="@+id/start2devicePosecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delta_time" />

            <TextView
                android:id="@+id/start2deviceDeltatime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose" />

            <TextView
                android:id="@+id/start2devicePose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quat" />

            <TextView
                android:id="@+id/start2deviceQuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adf2device" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/adf2deviceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose_count" />

            <TextView
                android:id="@+id/adf2devicePosecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delta_time" />

            <TextView
                android:id="@+id/adf2deviceDeltatime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose" />

            <TextView
                android:id="@+id/adf2devicePose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quat" />

            <TextView
                android:id="@+id/adf2deviceQuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adf2start" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/adf2startStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose_count" />

            <TextView
                android:id="@+id/adf2startPosecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delta_time" />

            <TextView
                android:id="@+id/adf2startDeltatime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pose" />

            <TextView
                android:id="@+id/adf2startPose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quat" />

            <TextView
                android:id="@+id/adf2startQuat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/uuidCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/top_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/third_person_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="5dp"
        android:text="@string/top_down" />

    <Button
        android:id="@+id/first_person_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/third_person_button"
        android:layout_alignLeft="@+id/third_person_button"
        android:layout_alignParentRight="true"
        android:paddingRight="5dp"
        android:text="@string/first_person" />

    <Button
        android:id="@+id/third_person_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/top_down_button"
        android:layout_alignParentRight="true"
        android:paddingRight="5dp"
        android:text="@string/third_person" />

    <Button
        android:id="@+id/saveAdf"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save_adf" />

</RelativeLayout>